--- a/Frontend/Manager_area/viewTasks.html
+++ b/Frontend/Manager_area/viewTasks.html
@@ -135,7 +135,19 @@
                 <h2>Editar Tarea</h2>
                 <form @submit.prevent="editarTarea">
                     <label for="idHabitacion">Habitación:</label>
-                    <input v-model="tareaSeleccionada.ID_HABITACION" id="idHabitacion" type="number" required>
+                    <select v-model="tareaSeleccionada.ID_HABITACION" id="idHabitacion" required>
+                      <option disabled value="">Selecciona una habitación</option>
+                      <option value="101">101</option>
+                      <option value="102">102</option>
+                      <option value="103">103</option>
+                      <option value="104">104</option>
+                      <option value="105">105</option>
+                      <option value="201">201</option>
+                      <option value="202">202</option>
+                      <option value="203">203</option>
+                      <option value="204">204</option>
+                      <option value="205">205</option>
+                    </select>
         
                     <label for="nombre">Nombre:</label>
                     <input v-model="tareaSeleccionada.NOMBRE" id="nombre" type="text" maxlength="30" required>
