--- a/Frontend/user/user.html
+++ b/Frontend/user/user.html
@@ -59,7 +59,7 @@
 <section class="header">
     <div class="logo">
         <i class="ri-menu-line icon icon-0 menu"></i>
-        <h2>Hosp<span>Ital</span></h2>
+        <h2>Clinic<span>Manager</span></h2>
     </div>
     <div class="header-user">
         <p class="user">Seccion empleado</p>
