--- a/Frontend/Admin/super-admin.html
+++ b/Frontend/Admin/super-admin.html
@@ -41,7 +41,7 @@
     <section class="header">
         <div class="logo">
             <i class="ri-menu-line icon icon-0 menu"></i>
-            <h2>Hosp<span>Ital</span></h2>
+            <h2>Clinic<span>Manager</span></h2>
         </div>
         <div class="header-user">
             <p class="user"></p>
@@ -146,7 +146,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
             <div class="employees">
                 <div class="title">
@@ -185,7 +184,7 @@
                         </div>
                     </div>
                 </div>
-                
+
             </div>
 
         </div>
