--- a/Frontend/Admin/viewEmp.html
+++ b/Frontend/Admin/viewEmp.html
@@ -43,7 +43,7 @@
 <section class="header">
     <div class="logo">
         <i class="ri-menu-line icon icon-0 menu"></i>
-        <h2>Hosp<span>Ital</span></h2>
+        <h2>Clinic<span>Manager</span></h2>
     </div>
     <div class="header-user">
         <p class="user"></p>
@@ -95,8 +95,8 @@
                 <div class="search">
                     <input type="text" placeholder="Buscar Empleado..." v-model="searchQuery" @input="aplicarFiltros">
                 </div>
-                <select name="date" class="dropdown doctor--filter" @change="filtrarEmpleados">
-                    <option value="active">Activos</option>
+                <select name="estado" class="dropdown doctor--filter" v-model="estadoFiltro" @change="filtrarEmpleados">
+                    <option value="all">Activos</option>
                     <option value="busy">Inactivos</option>
                 </select>
 
