--- a/Frontend/user/user-complete-tasks.html
+++ b/Frontend/user/user-complete-tasks.html
@@ -45,7 +45,7 @@
 <section class="header">
     <div class="logo">
         <i class="ri-menu-line icon icon-0 menu"></i>
-        <h2>Hosp<span>Ital</span></h2>
+        <h2>Clinic<span>Manager</span></h2>
     </div>
     <div class="search--user--profile">
         <button class="button--user--profile">
